crates/cli/tests/snapshots/project_graph_test__aliases__can_focus_using_an_alias.snap
---
source: crates/cli/tests/project_graph_test.rs
assertion_line: 73
expression: get_assert_output(&assert)
---
digraph {
    0 [ label="(workspace)" style=filled, shape=oval, fillcolor=black, fontcolor=white]
    1 [ label="nodeNameScoped" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    0 -> 1 [ arrowhead=none]
}



