crates/cli/tests/snapshots/project_graph_test__aliases__resolves_aliases_in_depends_on.snap
---
source: crates/cli/tests/project_graph_test.rs
assertion_line: 85
expression: get_assert_output(&assert)
---
digraph {
    0 [ label="(workspace)" style=filled, shape=oval, fillcolor=black, fontcolor=white]
    1 [ label="noLang" style=filled, shape=oval, fillcolor=gray, fontcolor=black]
    0 -> 1 [ arrowhead=none]
}



